# bug-repro-gnome-cursor-disappear

./: .clang-format  meson.build
src/: main.c
